# Rustact

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  RELEASE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-docs.yml  release.yml
docs/: api-docs.md  architecture.md  guide.md  roadmap.md  styling.md  template.md  tutorial.md
examples/: README.md
examples/ops-dashboard/: Cargo.toml
examples/ops-dashboard/src/: main.rs
examples/rustact-demo/: Cargo.toml
examples/rustact-demo/src/: main.rs
src/: interactions.rs  lib.rs  main.rs
src/context/: mod.rs
src/events/: mod.rs  tests.rs
src/hooks/: handles.rs  mod.rs  registry.rs  scope.rs
src/hooks/tests/: registry.rs
src/interactions/: tests.rs
src/renderer/: mod.rs
src/renderer/widgets/: block.rs  button.rs  flex.rs  form.rs  gauge.rs  input.rs  layers.rs  list.rs  mod.rs  modal.rs  table.rs  tabs.rs  text.rs  toast.rs  tree.rs
src/runtime/: app.rs  component.rs  dispatcher.rs  element.rs  mod.rs  tasks.rs  view.rs
src/runtime/tests/: app.rs  dispatcher.rs  mod.rs
src/styles/: computed.rs  mod.rs  parser.rs  query.rs  stylesheet.rs
src/styles/tests/: errors.rs  mod.rs  parser.rs  stylesheet.rs
src/text_input/: handle.rs  mod.rs  registry.rs  state.rs
src/text_input/tests/: handle.rs  mod.rs  state.rs
styles/: demo.css
templates/rustact-app/: Cargo.toml  README.md  template.toml
templates/rustact-app/src/: main.rs
templates/rustact-app/src/components/: root.rs
templates/rustact-app/styles/: app.css
website/: config.toml  index.html  styles.css
website/content/docs/: _index.md  api-docs.md  architecture.md  guide.md  roadmap.md  styling.md  template.md  tutorial.md  widgets.md
website/static/: styles.css
website/templates/: base.html  doc.html  docs.html  home.html
