[package]
name = "rustact"
version = "0.1.0"
edition = "2024"
description = "Async terminal UI framework inspired by React, built on top of ratatui and tokio."
license = "MIT"
repository = "https://github.com/IllusiveBagel/rustact"
homepage = "https://github.com/IllusiveBagel/rustact"
documentation = "https://illusivebagel.github.io/rustact"
readme = "README.md"
rust-version = "1.85"
keywords = ["tui", "terminal", "react", "tokio", "async"]
categories = ["command-line-utilities", "gui"]
include = [
	"src/**",
	"Cargo.toml",
	"README.md",
	"LICENSE",
	"CHANGELOG.md",
]

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
parking_lot = "0.12"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
tokio-stream = "0.1"
unicode-width = "0.1"
tracing = "0.1"
