[package]
name = "rustact-ops-dashboard"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
tracing = "0.1"
rustact = { path = "../../" }
